fix(drawing): fix Add Comment text wrapping in Safari (#673)

--- a/src/components/Popups/PopupDrawingToolbar.scss
+++ b/src/components/Popups/PopupDrawingToolbar.scss
@@ -66,7 +66,7 @@
 }
 
 .ba-PopupDrawingToolbar-comment {
-    @include ba-PopupDrawingToolbarButton($width: auto);
+    @include ba-PopupDrawingToolbarButton($width: max-content);
     @include common-typography;
 
     padding-right: 18px;
